--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md bg-dark sticky-top border-bottom" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-md bg-dark sticky-top border-bottom row" data-bs-theme="dark">
       <div class="container">
         <a class="navbar-brand d-md-none" href="#">
           Travel Guide
